content/_generated-doc/2.7/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-multi-tenancy-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-multi-tenancy-config_configuration]]link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-multi-tenancy-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-multi-tenancy-config_quarkus.hibernate-search-orm.multi-tenancy.tenant-ids]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-multi-tenancy-config_quarkus.hibernate-search-orm.multi-tenancy.tenant-ids[quarkus.hibernate-search-orm.multi-tenancy.tenant-ids]`

[.description]
--
An exhaustive list of all tenant identifiers that may be used by the application when multi-tenancy is enabled. 
 Mainly useful when using the `outbox-polling` coordination strategy, since it involves setting up one background processor per tenant.
--|list of string 
|


a| [[quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-multi-tenancy-config_quarkus.hibernate-search-orm.-persistence-unit-name-.multi-tenancy.tenant-ids]]`link:#quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-runtime-config-persistence-unit-multi-tenancy-config_quarkus.hibernate-search-orm.-persistence-unit-name-.multi-tenancy.tenant-ids[quarkus.hibernate-search-orm."persistence-unit-name".multi-tenancy.tenant-ids]`

[.description]
--
An exhaustive list of all tenant identifiers that may be used by the application when multi-tenancy is enabled. 
 Mainly useful when using the `outbox-polling` coordination strategy, since it involves setting up one background processor per tenant.
--|list of string 
|

|===